[gd_scene load_steps=7 format=3 uid="uid://cu0l4x28nikl"]

[ext_resource type="Theme" uid="uid://7qtjarwklgd2" path="res://ui/Themes/ui_theme.tres" id="1_68j5v"]
[ext_resource type="Script" uid="uid://dlemi7jy41f5g" path="res://ui/gameplay_ui/shop_item_ui.gd" id="1_wjryw"]
[ext_resource type="Texture2D" uid="uid://df3vmvvomkt0j" path="res://Assets/Icons/HookIcon.png" id="2_68j5v"]
[ext_resource type="PackedScene" uid="uid://b2wuithykkaes" path="res://ui/click_sound_player.tscn" id="3_dlrfh"]
[ext_resource type="Texture2D" uid="uid://bkxx4me3aopdt" path="res://Assets/Icons/ui_icon_bg.png" id="3_mg81s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pne7h"]

[node name="ShopItem" type="PanelContainer"]
offset_right = 104.0
offset_bottom = 58.0
size_flags_vertical = 0
mouse_filter = 1
theme = ExtResource("1_68j5v")
script = ExtResource("1_wjryw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameAndIcon" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Frame" type="TextureRect" parent="VBoxContainer/NameAndIcon"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_mg81s")
expand_mode = 1

[node name="Icon" type="TextureRect" parent="VBoxContainer/NameAndIcon/Frame"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_68j5v")
expand_mode = 1

[node name="FlavorEstate" type="PanelContainer" parent="VBoxContainer/NameAndIcon"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_pne7h")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/NameAndIcon/FlavorEstate"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="ItemName" type="Label" parent="VBoxContainer/NameAndIcon/FlavorEstate/PanelContainer"]
layout_mode = 2
text = "Upgrade Text"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="ItemPrice" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Buy"

[node name="ClickSoundPlayer" parent="." instance=ExtResource("3_dlrfh")]
